T2-598 increase default permgen space to 140MB
git-svn-id: https://taverna.googlecode.com/svn/taverna/products/net.sf.taverna.t2.taverna-workbench/trunk/workbench-distro@7770 bf327186-88b3-11dd-a302-d386e5130c1c